# gotorch

./: .gitignore  cuda.go  device.go  go.mod  optim.go  tensor.go  tensor_ctor.go  tensor_gc.go  tensor_gob.go  tensor_ops.go
cgotorch/: CMakeLists.txt  build.sh  cgotorch.h  cuda.cc  device.cc  functional.cc  functional.h  init.cc  ivalue.cc  ivalue.h  memory.cc  optim.cc  tensor.cc  tensor.h  torch.cc  torch.h  torchscript.cc  torchscript.h
example/torchscript/: torch.go  torch_test.go
jit/: ivalue.go  ivalue_gc.go  module.go  module_gc.go
nn/functional/: functional.go
nn/initializer/: initializer.go
test_cuda/: CMakeLists.txt  main.cpp
